--- a/pastadata/holiday/easter.json
+++ b/pastadata/holiday/easter.json
@@ -1,6 +1,17 @@
 { 
     "android": [ 
-        { "pasta": "test", "name": "oc"}, 
-        { "pasta": "test", "name": "oc"}
+        { "pasta": "It\'s that time again⏱Daddy Claus has been and gone🎅so all you cummy bunnies🐰👀and sexy chicks 🐥 better get egg-cited🥚for Easter to cum😩💦send this to 🔟other chocolate hunnies🍫👅or else you won\'t❌🚫be hop hop hopping🐇🐇on some Easter Dick😏🍆", "name": ""},
+        { "pasta": "ET TU, BOOTAY⁉️⁉️ The RIDES 💯💯💯 👀👀👀 of March 📅📅 has CUM 💦💦💦💦👉👌 get ready to roman BUST A NUT‼️‼️ 💥💥🌰🌰🌰 Best wishes to all you SENATE SLUTS 👅🌽👅🌽 doesn’t matter if you’re a plebeian 🏚🏚🏚💸💸 or PUSSYtrician 😼😼😼🤑🤑🤑 because DADDY 👅👨👅👨 Brutus is the DICKtator 🍆🍆🍆🍆🍆 we all deserve 👄👄 just like juliASS 🍑😩🍑😩🍑 caesar we’re gonna get stabbed 🔪 🍌🔪🍌 2️⃣3️⃣ times in the BACK 🌽🌽🌽🍑🍑🍑 tonight. send this to 1️⃣5️⃣ of your BEST 😏😏😏 Senate Sluts 🏛🏛🏛👉👌get 5️⃣ back and you’re a BACK 🍑🍑 STABBER 🔪🌽🔪🌽🔪 get 1️⃣0️⃣ back and you’re a citizen of the roman repubLICK 👅👄👅👄👅 get 1️⃣5️⃣ back and you’re a glaDICKator 🍌🍌🍆🍆🏟🏟🏟", "name": ""},
+        { "pasta": "Nigga FUCK APRIL FOOLS🖕🏾😤🖕🏾Its GAYpril FOOLS 😩👊🏾 Suck A Nigga Meat &amp; If a Hater Say🗣 "Bruh U gay😭😑" Say Chill✋🏾😒 Its Jus A Prank Bro😩🍆🎭💯", "name": ""},
+        { "pasta": "🍀 🍀 🍀 🍀 🍀🍀🍀🍀 🍀 🍀 🍀 🍀
+🍀🍀🍀🍀 🍀 🍀🍀🍀🍀 🍀 🍀🍀🍀🍀
+🍀 🍀 🍀 🍀 🍀 🍀 🍀
+🍀🍀🍀🍀 🍀 🍀 🍀🍀🍀🍀 🍀 🍀 🍀🍀🍀🍀
+🍀🍀🍀🍀 🍀 🍀 🍀 🍀🍀🍀🍀
+🍀🍀🍀🍀 🍀 🍀 🍀 🍀
+🍀🍀🍀🍀 🍀 🍀 🍀 🍀🍀🍀🍀
+🍀 🍀 🍀 🍀 🍀🍀🍀🍀 🍀 🍀 🍀 🍀
+Hoping to get 🍀LUCKY🍀 this 🐢St. Patrick\'s Day?🍀? Want someone to rub you for luck🔮? ✳️Maybe put their🐍 shamrock🍀shake in your pot of gold?✳️ I sent this to you because🐸 you\'re🌵 one of my 🌳LUCKIEST 🌱 hoes!!!!!!!!
+Send this🔋 to TEN of 🈯️your SLUTTIEST LUCKY bitches this📗 St. Patrick\'s Day🍏. You know,🍃 the ones 💚that are big sluts but✅are lucky enough 🐲not to catch an STD!!!!!!❇️ If you don\'t🌴 send 💹this ♻️around to 🐊10 sluts you\'ll have BAD LUCK and contract❎ 6 STDs in the 🌲next 24 hours!😈 I BETTER get one 🌿back!🍀🍀🍀🍀🍀🍀🍀🍀🍀🍀🍀🍀🍀", "name": ""}
     ] 
 }
